* Fixed 'czero' servers in the live server view to show maps correctly.
* Fixed 'white screen' problems on certain pages when run on PHP5.
* Corrected 'kill_streak' and 'death_streak' calculation in awards.
* Fixed team detection for players w/o the need for 'joined_team' events.
* Fixed player bonuses. Bonus points were not actually being added to skill.

Version 3.0.4 beta (2007-02-10)
+ Added clean module detection to stats.pl to show 'pretty' errors
if a non-standard module is not present or if Perl is too old.
* Tweaked some events in Game/halflife.pm
* Fixed language encoding problem in certain parts of the theme.
(UTF8 characters were not encoded correctly).
* Fixed smarty plugin function.mapimg.php. It was causing infinite 
loops on some systems due to bad file paths.
* Fixed a DB query that greatly affected the load times of the main
player index and possibly other listings on the stats web pages.
* Fixed some player stats from not being saved properly. This would cause
some players to have slightly lower stats than what the logs actually reflect.
* A couple more tweaks to the Installer that adds more logic for minimum
requirements and less confusion when tables already exist.
* DOD player bonuses have been added to the default config and confirmed
working.
* Updated DOD theme pieces to include some missing DOD specific information.

Version 3.0.3 beta (2007-02-03)
* Recoded the Install wizard to remove some confusion during the database
initialization step. Also made step 6 (compiled themes) more robust to 
allow users to change the path and have better permission checking.

Version 3.0.2 beta (2007-02-02)
* Fixed 'notice' errors on install pages.
* Fixed 'Field 'logo' has no default value' when updating stats for certain
versions of MySQL.
+ Changed default settings for a few config variables. Like disabling 
warnings for unknown events and enabling partial week awards.

Version 3.0.1 beta (2007-02-02)